upload de imagens

--- a/src/views/admin/chefs/edit.njk
+++ b/src/views/admin/chefs/edit.njk
@@ -10,7 +10,7 @@
           <button type="button" id="open" class="button button--danger">
             Deletar
           </button>
-          <button type="submit" class="button">Salvar receita</button>
+          <button type="submit" class="button">Salvar chef</button>
         </div>
       </div>
 
