--- a/public/css/components.css
+++ b/public/css/components.css
@@ -120,7 +120,10 @@
 }
 
 .header__form input {
-  font-family: "Roboto", sans-serif;
+  border: 1px solid #ddd;
+  border-radius: 0.4rem;
+  padding: 1rem;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.4rem;
   width: 25rem;
   margin-right: 0.5rem;
@@ -310,7 +313,7 @@
   border: 1px solid #ddd;
   outline: 0;
 
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
 }
 
@@ -359,4 +362,65 @@
   font-size: 1.4rem;
   color: var(--color-grey-medium);
   text-align: center;
+}
+
+/* UPLOAD CONTAINER */
+.upload-container {
+  display: grid;
+  grid-template-columns: repeat(6, 15rem);
+  gap: 0.5rem;
+}
+
+.upload-container .photo {
+  position: relative;
+}
+
+.upload-container .photo img {
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+}
+
+.upload-container .photo i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(255, 255, 255, 0.6);
+  color: tomato;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 3.6rem;
+  cursor: pointer;
+
+  opacity: 0;
+  transition: opacity 200ms;
+}
+
+.upload-container > div:hover i {
+  opacity: 1;
+}
+
+/* UPLOAD */
+.form__group .upload-btn {
+  width: 100%;
+  height: 15rem;
+  border: 1px solid #ddd;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.form__group .upload-btn > i {
+  font-size: 4.8rem;
+  color: rgba(0, 0, 0, 0.6);
 }
