--- a/src/views/admin/recipes/show.njk
+++ b/src/views/admin/recipes/show.njk
@@ -10,7 +10,25 @@
     </div>
 
     <header class="page-detail__header">
-      <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
+      <div class="gallery">
+        <img src="{{ recipe.images[0].src }}" alt="{{ recipe.title }}">
+        <div 
+          class="gallery-thumbnails" 
+          style="grid-template-columns: repeat({{recipe.images.length}}, 80px)"
+        >
+          {% for image in recipe.images %}
+            <img 
+              src="{{image.src}}" 
+              alt="photo-{{image.name}}"
+              onclick="Gallery.setImage(event)"
+              {% if loop.index0 === 0 %}
+                class='active'
+              {% endif %}
+            >
+          {% endfor %}
+        </div>
+      </div>
+
       <h1>{{ recipe.title }}</h1>
       <span>por {{ recipe.author }}</span>
     </header>
@@ -47,4 +65,8 @@
       </div>
     {% endif %}
   </section>
+{% endblock %}
+
+{% block scripts %}
+  <script src="/js/gallery.js"></script>
 {% endblock %}
