--- a/src/views/admin/chefs/show.njk
+++ b/src/views/admin/chefs/show.njk
@@ -8,7 +8,7 @@
     </div>
 
     <header class="page-detail__chef">
-      <img src="{{ chef.avatar_url }}" alt="{{ chef.name }}">
+      <img src="{{ chef.image }}" alt="{{ chef.name }}">
       <h1>{{ chef.name }}</h1>
       {% if chef.total_recipes > 1 %}
         <span>{{ chef.total_recipes }} receitas</span>
