--- a/src/views/pages/chefs.njk
+++ b/src/views/pages/chefs.njk
@@ -5,7 +5,7 @@
     <div class="chefs">
       {% for chef in chefs %}
         <div class="chef">
-          <img class="chef__image" src="{{ chef.avatar_url }}" alt="{{ chef.name }}">
+          <img class="chef__image" src="{{ chef.image }}" alt="{{ chef.name }}">
           <div class="chef__content">
             <h2>{{ chef.name }}</h2>
             {% if chef.total_recipes > 1 %}
